--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,9 @@
       rel="stylesheet"
       href="https://arnoldclark.github.io/chassis/chassis.css"
     />
-
-    <link
-      rel="stylesheet"
-      href="https://arnoldclark.github.io/chassis/chassis-ui.css"
-    />
   </head>
   <body>
     <div id="app"></div>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
