Adds local version of Chassis

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,7 @@
       href="https://cloud.typography.com/7457892/760084/css/fonts.css"
     />
 
-    <link
-      rel="stylesheet"
-      href="https://arnoldclark.github.io/chassis/chassis.css"
-    />
+    <link rel="stylesheet" href="./static/css/chassis.css" />
   </head>
   <body>
     <div id="app"></div>
